--- a/index.html
+++ b/index.html
@@ -10,6 +10,186 @@
         <title>12 Bool</title>
     </head>
     <body>
-        
+        <section id="homework">
+
+            <div class="container">
+                <h2>Esercizio per casa</h2>
+
+                <div class="row"> <!--inizio row 1-->
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                </div> <!--fine row 1-->
+
+                <div class="row"> <!--inizio row 2-->
+                    <div class="col-lg-2">
+                        <div class="box">
+                            col
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="box">
+                            col
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <div class="box">
+                            col
+                        </div>
+                    </div>
+                </div> <!--fine row 2-->
+
+                <div class="row"> <!--inizio row 3-->
+                    <div class="col-lg-12">
+                        <div class="box">
+                            12 col
+                        </div>
+                    </div>
+                </div> <!--fine row 3-->
+
+                <div class="row"> <!--inizio row 4-->
+                    <div class="col-lg-8">
+                        <div class="box">
+                            8 col
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="box">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="box">
+                            2 col
+                        </div>
+                    </div>
+                </div> <!--fine row 4-->
+
+                <div class="row"> <!--inizio row 5-->
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="box">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="box">
+                            2 col
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="box">
+                            6 col
+                        </div>
+                    </div>
+                    <div class="col-lg-1">
+                        <div class="box">
+                            1 col
+                        </div>
+                    </div>
+                </div> <!--fine row 5-->
+
+                <div class="row"> <!--inizio row 6-->
+                    <div class="col-lg-6">
+                        <div class="box">
+                            <div class="row">
+                                <div class="col-lg-2">
+                                    <div class="sub-box">
+                                        Nested 2 col
+                                    </div>
+                                </div>
+                                <div class="col-lg-2">
+                                    <div class="sub-box">
+                                        Nested 2 col
+                                    </div>
+                                </div>
+                                <div class="col-lg-8">
+                                    <div class="sub-box">
+                                        Nested 8 col
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="box">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="sub-box">
+                                        Nested 6 col
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="sub-box">
+                                        Nested 6 col
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
