Update esercizio completato

--- a/index.html
+++ b/index.html
@@ -188,8 +188,152 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> <!--fine row 6-->
             </div>
+
+            <br>
+
+            <div class="container"> <!--inizio test col-->
+                <div class="row">
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-1">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-2">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-3">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-5">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="box-no-text"></div>
+                    </div>
+
+                    <div class="col">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+            </div> <!--fine test col-->
+        </section>
+
+        <br>
+
+        <section id="offset">
+            <div class="container">
+                <h2>Offset</h2>
+
+                <div class="row"> <!--inizio test offset-->
+                    <div class="col-lg-1 col-lg-offset-11">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-2 col-lg-offset-10">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-3 col-lg-offset-9">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-4 col-lg-offset-8">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-5 col-lg-offset-7">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-6 col-lg-offset-6">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-7 col-lg-offset-5">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-4">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-9 col-lg-offset-3">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-10 col-lg-offset-2">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-11 col-lg-offset-1">
+                        <div class="box-no-text"></div>
+                    </div>
+                </div>
+            </div> <!--fine test offset-->
         </section>
     </body>
 </html>
